# DockerScanner

./: .gitignore  README.md  dataset_analysis.ipynb  experiment.py  pyproject.toml  qwe.ipynb  qwe.py  statistics.ipynb  tool.py  trivy_modification.py  unique_vuls_random_df.csv
cve_bin_tool_utils/: aggregate.py  scan.py
dockerfile_utils/: scan_layers.py
evaluation/: may_10_all_df.csv  may_10_unique_vuls_all_df.csv  most_pulled_df.csv  paper_most_pulled.csv  paper_random.csv  paper_vulhub.csv  random_df.csv  unique_vuls_most_pulled_df.csv  unique_vuls_vulhub_df.csv  vulhub_df.csv
sbom/cyclonedx/: get_sbom.py
scanning_results/: clair.json
scanning_results/docker_scout_scanning_results_alpine:3.20_2024-12-08T23:20:39.501973/: docker_scout_no_sbom.json
scanning_results/docker_scout_scanning_results_alpine:3.20_2024-12-08T23:49:31.942411/: docker_scout_with_sbom.json
scanning_results/docker_scout_scanning_results_centos:centos7_2024-12-08T23:21:23.019308/: docker_scout_no_sbom.json
scanning_results/docker_scout_scanning_results_consul:1.15.4_2024-12-08T23:21:29.161990/: docker_scout_no_sbom.json
scanning_results/docker_scout_scanning_results_debian:12_2024-12-08T23:21:16.653369/: docker_scout_no_sbom.json
scanning_results/docker_scout_scanning_results_httpd:2.4.62_2024-12-08T23:21:00.191465/: docker_scout_no_sbom.json
scanning_results/scanning_results_apache_druid/: clair.json
scanning_results_memcached:1.6.32_2024-12-08T12:17:30.652606/: grype_sbom.json
schemas/: cve.py
utils/: cve_utils.py  docker_utils.py  filesystem_utils.py  tar_utils.py
(+1128 files in other folders)
